# 2025-2026-autumn

./: README.md
GaussZero/: main.cpp  matrix.txt
GaussZero/print/: print.cpp
GaussZero/solver/: CMakeLists.txt  solver.cpp  solver.h
Progect_Gauss/: CMakeLists.txt  main.cpp
Progect_Gauss/init/: init.cpp  init.h
Progect_Gauss/print/: CMakeLists.txt  print.cpp  print.h
Progect_Gauss/solver/: CMakeLists.txt  solver.cpp  solver.h
Progect_Gauss_pool/: CMakeLists.txt  main.cpp
Progect_Gauss_pool/init/: CMakeLists.txt  init.cpp  init.h
Progect_Gauss_pool/parallel/: CMakeLists.txt  solver.cpp  solver.h
Progect_Gauss_pool/print/: CMakeLists.txt  print.cpp  print.h
Progect_Gauss_pool/sequential/: CMakeLists.txt  solver.cpp  solver.h
kth_Eigenvalue/: CMakeLists.txt  main.cpp
kth_Eigenvalue/init/: init.cpp  init.h
kth_Eigenvalue/print/: print.cpp  print.h
kth_Eigenvalue/solver/: solver.cpp  solver.h
kth_Eigenvalue/tests/: test1.txt  test2.txt  test3.txt
